Use java 11 style